<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/engine_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/smallPadding"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:showIn="@layout/fragment_params">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_fifty_settings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/gap_label_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:text="@string/gaps_label"
        app:layout_constraintEnd_toStartOf="@id/guideline_fifty_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/in_gap_params_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/guideline_fifty_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gap_label_textView">

        <TextView
            android:id="@+id/in_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/in_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gap_label_textView" />

        <com.example.thermalgapcalc.ParamsEditText
            android:id="@+id/in_gap_params_editText"
            style="@style/param_editText"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/hint_params_mm"
            app:layout_constraintBaseline_toBaselineOf="@+id/in_label_textView"
            app:layout_constraintStart_toEndOf="@id/in_label_textView" />

        <TextView
            android:id="@+id/in_plus_minus_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/digPlusMinus"
            app:layout_constraintBaseline_toBaselineOf="@id/in_gap_params_editText"
            app:layout_constraintStart_toEndOf="@+id/in_gap_params_editText" />

        <com.example.thermalgapcalc.ParamsEditText
            android:id="@+id/in_tolerances_editText"
            style="@style/param_editText"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/hint_params_mm"
            app:layout_constraintBaseline_toBaselineOf="@id/in_plus_minus_label_text_view"
            app:layout_constraintStart_toEndOf="@id/in_plus_minus_label_text_view" />
    </LinearLayout>

    <View
        android:id="@+id/ex_label_bottom_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_fifty_settings"
        app:layout_constraintStart_toStartOf="@id/guideline_fifty_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ex_gap_params_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_fifty_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_gap_params_layout">

        <TextView
            android:id="@+id/big_ex_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/ex_label"
            app:layout_constraintBaseline_toBaselineOf="@id/ex_gap_params_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <com.example.thermalgapcalc.ParamsEditText
            android:id="@+id/ex_gap_params_editText"
            style="@style/param_editText"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/hint_params_mm"
            app:layout_constraintBaseline_toBaselineOf="@id/in_label_textView"
            app:layout_constraintStart_toEndOf="@+id/in_label_textView" />

        <TextView
            android:id="@+id/ex_plus_minus_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/digPlusMinus"
            app:layout_constraintBaseline_toBaselineOf="@id/ex_gap_params_editText"
            app:layout_constraintStart_toEndOf="@+id/ex_gap_params_editText" />

        <com.example.thermalgapcalc.ParamsEditText
            android:id="@+id/ex_tolerances_editText"
            style="@style/param_editText"
            android:layout_margin="@dimen/small_margin"
            android:hint="@string/hint_params_mm"
            app:layout_constraintBaseline_toBaselineOf="@id/ex_plus_minus_label_text_view"
            app:layout_constraintStart_toEndOf="@+id/ex_plus_minus_label_text_view" />
    </LinearLayout>

    <TextView
        android:id="@+id/cylinders_size_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:text="@string/dig_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_fifty_settings"
        app:layout_constraintTop_toBottomOf="@+id/cylinders_label_textView" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/cylinders_seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:max="8"
        android:min="1"
        android:padding="@dimen/smallPadding"
        android:progress="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_fifty_settings"
        app:layout_constraintTop_toBottomOf="@+id/cylinders_size_textView" />

    <TextView
        android:id="@+id/cylinders_label_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:text="@string/cylinders_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_fifty_settings"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valves_label_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:text="@string/valves_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_fifty_settings"
        app:layout_constraintTop_toBottomOf="@+id/cylinders_seekBar" />

    <RadioGroup
        android:id="@+id/valves_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_fifty_settings"
        app:layout_constraintTop_toBottomOf="@+id/valves_label_textView">

        <RadioButton
            android:id="@+id/radioValve2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dig_2" />

        <RadioButton
            android:id="@+id/radioValve4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dig_4" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>